@@ -5,6 +5,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -12,16 +13,16 @@ class IconTest {
 
     @ParameterizedTest
     @ValueSource (ints = { 0, 1, -1, 1000 })
-    void getIdentifier(int id) {
-        Icon icon = new Icon(Path.of("test"), id);
+    void testGetIdentifier(int id) {
+        Icon icon = new SVGIcon(Path.of("test"), id);
         assertEquals(id, icon.getIdentifier());
 
     }
 
     @Test
-    void getFilePath() {
-        Path testPath = Path.of("path\\test");
-        Icon icon = new Icon(testPath, 100);
-        assertEquals("path\\test\\100.svg", icon.getFilePath().toString());
+    void testGetFilePath() {
+        Path testPath = Path.of("path/test");
+        Icon icon = new SVGIcon(testPath, 100);
+        assertEquals(Paths.get("path/test/100.svg"), icon.getIconPath());
     }
 }
